--- a/res/layout/activity_sub.xml
+++ b/res/layout/activity_sub.xml
@@ -12,9 +12,20 @@
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/button1"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:scrollHorizontally="true"
         android:text="TextView"
         android:textSize="30sp" />
+
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
+        android:text="Get Dava Saved" />
 
 </RelativeLayout>
